# RAD-qt-widget

./: .gitignore  CMakeLists.txt  configparser.cpp  configparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake-ubutnu-24.04.yml  cmake-ubutnu-latest-lts.yml  cmake-ubutnu-latest.yml  cmake-win11-msys_clang64.yml
tests/: test-check.yaml
